--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,7 @@ container {
 .container-nav-links {
     width: 100%;
     display: flex;
+    padding-left: 30px;
 }
 
 
@@ -222,6 +223,10 @@ nav-section p {
     .site-logo {
         font-size: 30px;
         text-align: left;
+        padding-left: 0;
+    }
+
+    .container-nav-links {
         padding-left: 0;
     }
 
