--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ nav-section p {
 
 .article-img {
     width: 100%;
-    height: 260px;
+    height: auto;
 }
 
 .article-img:hover {
@@ -238,8 +238,6 @@ nav-section p {
         width: 340px;
         height: 300px;
     }
-    
-    
 
     .service-content {
         display: grid;
@@ -261,9 +259,5 @@ nav-section p {
 @media (max-width:1024px) {
     .article-content {
     width: 100%;
-    }
-
-    .article-img {
-        height: 320px;
     }
 }
