--- a/css/styles.css
+++ b/css/styles.css
@@ -240,7 +240,7 @@ nav-section p {
     }
 
     .map {
-        width: 440px;
+        width: 400px;
         height: 300px;
     }
 
@@ -261,7 +261,7 @@ nav-section p {
     }
 }
 
-@media (min-width:1920px) {
+@media (max-width:1920px) {
     .map {
         width: 440px;
     }
